<resources>
    <string name="app_name">TravelPack</string>
    <string name="login">login</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="forgot_password">FORGOT PASSWORD?</string>
    <string name="new_user_register_now"> "Don't have an Account? Sign Up" </string>
    <string name="or">OR</string>
    <string name="google_icon">google</string>
    <string name="facebook_icon">facebook</string>
    <string name="member_sign_in">Already have an account? Sign in</string>
    <string name="signup">Sign up</string>
    <string name="name">Name</string>
    <string name="destination">Destination</string>
    <string name="date">Date of travel</string>
    <string name="addTrip">Select Activities</string>
    <string name="apiKey">AIzaSyAfle75N_uj8IJH7QD6Ny1lJxP-B834Bjo</string>
    <string name="title_activity_try">Try</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="tab_text_1">My Trips</string>
    <string name="tab_text_2">Add Trip</string>
    <string name="title_activity_my_account">MyAccount</string>
    <string name="title_activity_my_account2">MyAccount2</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

</resources>