<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <View
        android:id="@+id/topView_trip"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:background="@color/colorPrimary"
        android:translationY="-90dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--    <ImageView-->
    <!--        android:id="@+id/imageRegister"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="match_parent"-->
    <!--        android:src="@drawable/register_page"-->
    <!--        android:translationY="-120dp"-->
    <!--        tools:layout_editor_absoluteX="0dp"-->
    <!--        tools:layout_editor_absoluteY="-161dp" />-->

    <View
        android:id="@+id/view_trip"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:background="@drawable/wave"
        android:translationY="-100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topView_trip" />

    <TextView
        android:id="@+id/topText_trip"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginTop="40dp"
        android:text="Add your trip"
        android:gravity="center_horizontal"
        android:textColor="@android:color/white"
        android:textSize="42sp"
        android:textStyle="bold"
        android:translationY="-20dp"
        app:layout_constraintEnd_toEndOf="@+id/topView_trip"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/topView_trip"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="32dp" />

    <EditText
        android:id="@+id/inputDestination"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/round_border"
        android:drawablePadding="16dp"
        android:ems="10"
        android:hint="@string/destination"
        android:inputType="textAutoComplete"
        android:padding="16dp"
        android:drawableLeft="@drawable/ic_location"
        android:translationY="120dp"
        app:layout_constraintBottom_toBottomOf="@+id/topView_trip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topText_trip"
        app:layout_constraintVertical_bias="0.621"
        android:autofillHints="destination" />

    <EditText
        android:id="@+id/inputDate1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/round_border"
        android:drawablePadding="16dp"
        android:ems="10"
        android:hint="@string/date"
        android:inputType="textAutoComplete"
        android:drawableLeft="@drawable/ic_calendar"
        android:padding="16dp"
        android:translationY="120dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputDestination"
        app:layout_constraintVertical_bias="0.621"
        android:autofillHints="date" />

    <TextView
        android:id="@+id/textDays"
        android:layout_width="0dp"
        android:layout_height="32dp"
        android:layout_marginStart="42dp"
        android:layout_marginTop="138dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:text="  Length of stay"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        android:drawableLeft="@drawable/ic_nights"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputDate1"
        android:layout_marginLeft="42dp"
        android:layout_marginRight="32dp" />


    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="320dp"
        android:layout_height="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="32dp"
        android:max="30"
        android:progress="0"
        android:indeterminate="false"
        android:progressBackgroundTint="@color/cardview_dark_background"
        android:progressTint="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textDays"/>

    <TextView
        android:id="@+id/nrDays"
        android:layout_width="0dp"
        android:layout_height="20dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:text="0"
        android:textColor="@color/purple_500"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekBar"/>

    <TextView
        android:id="@+id/type"
        android:layout_width="0dp"
        android:layout_height="32dp"
        android:layout_marginStart="42dp"
        android:layout_marginTop="34dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:text="  Type of trip"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        android:drawableLeft="@drawable/ic_plane"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekBar"
        android:layout_marginLeft="42dp"
        android:layout_marginRight="32dp" />

    <CheckedTextView
        android:id="@+id/business"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:text="Business"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        android:background="@drawable/round_border"
        android:drawablePadding="16dp"
        android:ems="10"
        android:padding="10dp"
        android:drawableLeft="@drawable/ic_business"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/type"/>

    <CheckedTextView
        android:id="@+id/leisure"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:text="Leisure"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        android:background="@drawable/round_border"
        android:drawablePadding="16dp"
        android:ems="10"
        android:padding="10dp"
        android:drawableLeft="@drawable/ic_leisure"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/business"/>

    <Button
        android:id="@+id/btnAddTrip"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/round_bg"
        android:text="@string/addTrip"
        android:clickable="true"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekBar" />


</androidx.constraintlayout.widget.ConstraintLayout>


